--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <title>lab08a</title>
 </head>
 <body>
+  <header>
+    <nav>
+      <img src="https://place-hold.it/200x70/ddd">
+      <ul>
+        <li*3
+      </ul>
+    </nav>
+  </header>
   
 </body>
 </html>
