--- a/index.html
+++ b/index.html
@@ -14,10 +14,46 @@
     <nav>
       <img src="https://place-hold.it/200x70/ddd">
       <ul>
-        <li*3
+        <li><a href="#">Menu Item 1</a></li>
+        <li><a href="#">Menu Item 2</a></li>
+        <li><a href="#">Menu Item 3</a></li>
+        <li><a href="#">Menu Item 4</a></li>
       </ul>
     </nav>
   </header>
-  
+  <main>
+    <img src="https://place-hold.it/960x450/ddd">
+    <ul>
+      <li><img src="https://place-hold.it/300x375/ddd" alt="placeholder alt text"></li>
+      <li><img src="https://place-hold.it/300x375/ddd" alt="placeholder alt text"></li>
+      <li><img src="https://place-hold.it/300x375/ddd" alt="placeholder alt text"></li>
+    </ul>
+    <section>
+      <img src="https://place-hold.it/480x400/ddd">
+      <article>
+        <h2>Featured Post</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores sint recusandae quos tenetur laboriosam aspernatur, dolores, ea corporis doloremque explicabo, voluptatibus quas impedit eius non facilis rerum ratione quis veniam.
+          Mollitia odio accusantium vero ipsam, doloremque aliquam fuga enim totam quae labore voluptas reiciendis eaque, libero alias id ad rerum iste ratione aliquid minus inventore? Ad, voluptate! Et, error illum.
+          Perspiciatis officiis officia molestias, odit incidunt consectetur nostrum itaque cupiditate assumenda dignissimos explicabo, est laudantium. Ea eum sequi sit, voluptatem est facere totam qui nisi omnis iste esse, modi similique.
+          Reiciendis voluptatibus animi voluptate molestiae accusantium nihil temporibus quasi sunt suscipit in fugit saepe voluptatum, commodi, doloremque perferendis nobis dolores maxime soluta incidunt deleniti. Laudantium quae voluptatibus sunt neque voluptas!
+          Aspernatur, illum velit id a laboriosam sit sequi, placeat, dolorem nesciunt ipsam hic! Possimus, consectetur recusandae nihil, unde optio accusantium quasi itaque dolore non iusto necessitatibus aspernatur repudiandae. Harum, explicabo!
+          Natus exercitationem cupiditate in sunt repellat, quisquam, asperiores ullam maxime repudiandae officia, nisi ipsum enim aut. Nesciunt ab magnam necessitatibus ducimus alias, at, voluptatem earum consequatur molestias, in inventore pariatur!
+          Possimus quidem tenetur ipsa optio. Eos, molestiae officiis. Eveniet sint laudantium quia vitae sunt. Minus aperiam facere omnis nemo, consequuntur ad harum tenetur cum magni ipsum numquam earum voluptatum et?
+          Hic dignissimos, animi exercitationem quis laboriosam repellat voluptatum quos consectetur consequuntur iure nesciunt! Nesciunt quis beatae quod dolore debitis similique eos eaque ex nostrum inventore optio, eius et magnam expedita.
+          Numquam esse illo cum, quas sunt facere praesentium quod asperiores labore quis accusamus, fugiat deleniti laudantium. Ratione numquam aperiam est, omnis aut porro ullam in, veniam sit cumque reiciendis corrupti.
+          Odio molestiae provident dignissimos quo eius maiores sint labore molestias ipsam veritatis eum exercitationem omnis voluptatum assumenda blanditiis, adipisci maxime quas, quis, asperiores numquam modi vero debitis optio dicta? Dolore?
+          Itaque quo ut deserunt, voluptate tempora eos suscipit debitis provident fugit sunt quasi dolorem maxime perspiciatis excepturi tempore quia nesciunt accusamus rerum consectetur cum. Quas perspiciatis optio aliquid ratione nulla.
+          Eligendi perspiciatis blanditiis cumque. Accusamus, aperiam dolores expedita fuga dolorum aut pariatur corporis necessitatibus iusto debitis rem deserunt tempore veritatis corrupti est, dignissimos eum sit! Minus tenetur tempora ullam itaque.
+          Expedita sint provident possimus a eveniet itaque distinctio voluptate illum esse deserunt voluptates odio, perferendis numquam, neque quibusdam magni, quas dolore aperiam cupiditate consectetur commodi. Quidem non minima expedita nihil.
+          Praesentium molestiae natus quo laudantium repudiandae iste nobis tenetur nulla mollitia! Corporis quasi officiis minima perferendis minus omnis id est ut odit doloribus itaque magni facere assumenda, ipsum veniam. Nihil.
+          Laudantium saepe officia cupiditate quae maxime sequi aspernatur quaerat excepturi, soluta perferendis sunt amet, natus atque, dolore ducimus quidem minus beatae enim blanditiis nostrum nobis. Ipsam nemo quaerat culpa voluptas?
+        </p>
+        <button>Button</button>
+      </article>
+    </section>
+  </main>
+  <footer>
+  </footer>
 </body>
 </html>
